GNOME Bugzilla – Bug 780254
Fix typo in update_context_styles which may result in an infinite loop
Last modified: 2017-04-10 09:12:03 UTC
Created attachment 348241 [details] [review] Fix for loop assignment in update_style_contexts Recently I have had several instances where gnome-shell becomes completely unresponsive while consuming 100% cpu due to an infinite loop. Examining the attached stack trace suggests it might be hitting the bug documented here: https://github.com/linuxmint/Cinnamon/issues/5254 The thread above points to the following patch which seems not to have been reported upstream and still applies to Gnome 3.20.3 which I am using on Fedora 24. https://github.com/linuxmint/muffin/commit/6120bddefd709d3f1611aa2af706fb3c43b5ae22 I have attached a shorter version of the patch that simply fixes the offending assignment in the for loop without changing the variable name as the Mint patch does. The patched Mutter has been running on my machine for less than a day so I can't say for sure if it is the sole cause of my gnome-shell problem but the current code looks broken so please consider including the Mint version of the patch or mine in a future release. Thanks
Created attachment 348242 [details] gnome-shell stack trace
Review of attachment 348241 [details] [review]: Whoops, thanks! Please use git-format-patch to include a commit message and proper attribution, otherwise LGTM
Created attachment 348243 [details] [review] Git formatted version of patch
Hi Florian, I have resubmitted the patch generated with git format-patch. Let me know if it looks acceptable now.
Review of attachment 348243 [details] [review]: Style nit: "frames: Use ..." No need to attach another version of the patch, but note that we are currently in hard-code freeze. So unless you want to ask the release team for an exception, this patch will have to wait until 3.24.0 is released next week.
I will only know after a few days of uptime if this bug is the sole cause of gnome-shell going into an infinite loop so I do not think an exception is necessary if the release is scheduled for next week.
I have not a recurrence of gnome-shell going into an infinite loop since I applied the patch 8 days ago.
We are no longer in hard code freeze, so please push!
Pushing the patch to make sure it gets into 3.24.1.
*** Bug 769090 has been marked as a duplicate of this bug. ***